// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition hook should return with ProgressBar props 1`] = `
Object {
  "aria-valuemax": 100,
  "aria-valuemin": 0,
  "aria-valuenow": 50,
  "children": .emotion-0 {
  height: 100%;
  background-color: #000000;
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 50%;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: #000000!important;
}

<Box
    className="emotion-0 emotion-1 emotion-2 bb-Box bb-ProgressBarIndicator"
  />,
  "className": "css-i19h14 css-63it0p css-gtgz6e bb-Box bb-ProgressBar",
  "role": "progressbar",
}
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint, #000000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 100%;
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-1 emotion-4 emotion-5 emotion-2 test bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`overrides ProgressBar.Indicator.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint, #000000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 100%;
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 50%;
}

.emotion-5 {
  background-color: var(--bb-palette-red, #ff0000);
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-1 emotion-4 emotion-5 emotion-2 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`overrides ProgressBar.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint, #000000);
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 100%;
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-1 emotion-4 emotion-5 emotion-2 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint, #000000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 100%;
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-1 emotion-4 emotion-5 emotion-2 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint, #000000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 100%;
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-1 emotion-4 emotion-5 emotion-2 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly with maxValue 1`] = `
.emotion-0 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint, #000000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 100%;
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 33.33333333333333%;
}

<div
  aria-valuemax="150"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-1 emotion-4 emotion-5 emotion-2 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`props should render correctly with size 1`] = `
.emotion-0 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint, #000000);
  height: 2rem;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 100%;
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-1 emotion-4 emotion-5 emotion-2 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`theming ProgressBar.Indicator.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint, #000000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 100%;
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 50%;
}

.emotion-5 {
  background-color: var(--bb-palette-red, #ff0000);
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-1 emotion-4 emotion-5 emotion-2 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;

exports[`theming ProgressBar.base should render correctly 1`] = `
.emotion-0 {
  border-radius: 6px;
  overflow: hidden;
  width: 100%;
  height: 1rem;
  background-color: var(--bb-palette-primaryTint, #000000);
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 100%;
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: width 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  width: 50%;
}

<div
  aria-valuemax="100"
  aria-valuemin="0"
  aria-valuenow="50"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-ProgressBar"
  role="progressbar"
>
  <div
    class="emotion-1 emotion-4 emotion-5 emotion-2 bb-Box bb-ProgressBarIndicator"
  />
</div>
`;
